# microservice

./: .gitignore  Makefile.am  Makefile.in  README.md  build.gradle  configure  configure.ac  settings.gradle
core/: build.gradle
core/src/main/java/com/muk/ext/camel/: ExpiringCacheValue.java  ExpiringIdempotentRepository.java  ExpiringLRUCache.java  StatusListAggregationStrategy.java
core/src/main/java/com/muk/ext/core/: AbstractBeanGenerator.java  AbstractRestBeanGenerator.java  Action.java  ApplicationState.java  ApplicationStateImpl.java  ExtensionRoot.java  GiftCardStatus.java  GiftCardType.java  ProjectCoreVersion.java  TenantResource.java
core/src/main/java/com/muk/ext/csv/: CsvRecord.java
core/src/main/java/com/muk/ext/process/: ProcessExecutor.java
core/src/main/java/com/muk/ext/security/: KeystoreService.java  NonceService.java  NonceStore.java
core/src/main/java/com/muk/ext/status/: ProcessStatus.java  Status.java
eclipse/: MukJavaProfile.xml  code_style.epf
gradle/: versioning.gradle
gradle/config/: buildConfig.groovy
gradle/wrapper/: gradle-wrapper.properties
mitmproxy/: mitmproxyca.jks
muk-core/: build.gradle
muk-core/src/main/java/com/muk/ext/camel/: ExpiringCacheValue.java  ExpiringIdempotentRepository.java  ExpiringLRUCache.java  StatusListAggregationStrategy.java
muk-core/src/main/java/com/muk/ext/core/: AbstractBeanGenerator.java  AbstractRestBeanGenerator.java  Action.java  ApplicationState.java  ApplicationStateImpl.java  ExtensionRoot.java  ProjectCoreVersion.java  TenantResource.java
muk-core/src/main/java/com/muk/ext/csv/: CsvRecord.java
muk-core/src/main/java/com/muk/ext/process/: ProcessExecutor.java
muk-core/src/main/java/com/muk/ext/security/: KeystoreService.java  NonceService.java  NonceStore.java
muk-core/src/main/java/com/muk/ext/status/: ProcessStatus.java  Status.java
services/: build.gradle
services/src/main/java/com/muk/services/api/: AdminExtensionService.java  AdminService.java  ApiContextLoader.java  BarcodeService.java  BlogService.java  BulkReadListService.java  BulkReadService.java  CachingOauthUserDetailsService.java  CmsService.java  ConfigurationService.java  ContentEnvelope.java  CrudListService.java  CrudService.java  CryptoService.java  CsvImportService.java  DocService.java  ExternalOauthService.java  IntentService.java  LogReaderService.java  MozuConfigurationService.java  MzdbService.java  NotificationPollService.java  NotificationService.java  OrderItemService.java  OrderService.java  PaymentService.java  ProductAttributeHelper.java  ProjectConfigurator.java  QueueDemultiplexer.java  SecurityConfigurationService.java  StatusHandler.java  SubCrudListService.java  SubCrudService.java  SuperSubCrudService.java  UaaLoginService.java
services/src/main/java/com/muk/services/commerce/: AbstractBulkListMozuService.java  AbstractBulkMozuService.java  AbstractListMozuService.java  AbstractListMozuSubService.java  AbstractMozuIntentService.java  AbstractMozuService.java  AbstractMozuSubService.java  AbstractSuperMozuSubService.java  CryptoServiceImpl.java  LogReaderServiceImpl.java
services/src/main/java/com/muk/services/configuration/: CachingConfig.java  ServiceConfig.java  (+1 more)
services/src/test/resources/: log4j.xml
webapp/: build.gradle
webapp/src/main/java/com/muk/app/: Main.java  StandAloneEntry.java  StandAloneRootConfig.java
webapp/src/main/java/com/muk/restlet/: CustomRestletBinding.java
webapp/src/main/java/com/muk/security/: AuthEventListener.java
webapp/src/main/java/com/muk/servlet/: RestApiCorsFilter.java
webapp/src/main/java/com/muk/web/: ForbiddenException.java  WebConstants.java
webapp/src/main/resources/: log4j.xml  messages_en.properties  setenv.sh
webapp/src/main/webapp/: index.html  index.jsp
webapp/src/main/webapp/WEB-INF/templates/: config.html  errorLog.html  layout.html  spa.html  spalayout.html  splash.html
webapp/src/main/webapp/WEB-INF/templates/fragments/: footer.html  header.html  jsConfig.html  spafooter.html  spaheader.html
webapp/src/main/webapp/resources/: uaa.yml
webapp/src/main/webapp/resources/css/: jquery-ui.min.css  jquery-ui.theme.min.css  style.css
webapp/src/main/webapp/resources/js/: bundle.js  configcore.js  core.js  spacore.js  tpl.js  vendors.js
(+168 files in other folders)
